--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm server.ts",
+    "dev": "node --loader ts-node/esm ./server.ts",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
