--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.0",
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.6",
     "nodemailer": "^6.9.14",
+    "notistack": "^3.0.1",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
