--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "dev": "node --loader ts-node/esm ./server.ts",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node --loader ts-node/esm ./server.ts"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@prisma/client": "^5.19.0",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "nodemailer": "^6.9.14",
     "notistack": "^3.0.1",
     "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
